--- a/lib/common/Makefile.am
+++ b/lib/common/Makefile.am
@@ -11,6 +11,7 @@ AM_CPPFLAGS = \
         -I$(top_srcdir) \
 	-I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/pack \
+	-I$(top_srcdir)/lib/label \
 	-I$(top_srcdir)/lib/xdot \
 	-I$(top_srcdir)/lib/fdpgen \
 	-I$(top_srcdir)/lib/pathplan \
