--- a/lib/gvc/Makefile.am
+++ b/lib/gvc/Makefile.am
@@ -44,10 +44,12 @@ libgvc_C_la_SOURCES = gvrender.c gvlayout.c gvdevice.c gvloadimage.c \
 libgvc_C_la_LIBADD = \
 	$(top_builddir)/lib/pack/libpack_C.la \
 	$(top_builddir)/lib/xdot/libxdot_C.la \
+	$(top_builddir)/lib/label/liblabel_C.la \
 	$(top_builddir)/lib/common/libcommon_C.la
 libgvc_C_la_DEPENDENCIES = \
 	$(top_builddir)/lib/pack/libpack_C.la \
 	$(top_builddir)/lib/xdot/libxdot_C.la \
+	$(top_builddir)/lib/label/liblabel_C.la \
 	$(top_builddir)/lib/common/libcommon_C.la
 if WITH_ORTHO
 libgvc_C_la_LIBADD += $(top_builddir)/lib/ortho/libortho_C.la
