Move label build before gvc build

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,7 +4,7 @@
 
 SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
 	vpsc rbtree ortho sparse patchwork expr common \
-	pack xdot gvc ingraphs topfish glcomp label \
+	pack xdot label gvc ingraphs topfish glcomp \
 	circogen dotgen dotgen2 fdpgen neatogen twopigen sfdpgen osage gvpr
 
 EXTRA_DIST = Makefile.old gvc.vcproj gvc.def
