fix entities.html breakage

--- a/tclpkg/gdtclft/demo/Makefile.am
+++ b/tclpkg/gdtclft/demo/Makefile.am
@@ -5,7 +5,7 @@ demodir = $(datadir)/@PACKAGE@/demo
 
 if WITH_TCL
 demo_SCRIPTS = entities.tcl
-demo_DATA = entities.tcl.README entities.tcl.html
+demo_DATA = entities.tcl.README entities.html
 endif
 
 EXTRA_DIST = entities.tcl entities.tcl.README entities.html
