--- a/lib/common/Makefile.am
+++ b/lib/common/Makefile.am
@@ -34,7 +34,7 @@ noinst_LTLIBRARIES = libcommon_C.la
 libcommon_C_la_SOURCES = arrows.c colxlate.c fontmetrics.c \
 	args.c memory.c globals.c htmllex.c htmlparse.y htmltable.c input.c \
 	pointset.c intset.c postproc.c routespl.c splines.c psusershape.c \
-	timing.c labels.c ns.c shapes.c utils.c geom.c \
+	timing.c labels.c ns.c shapes.c utils.c geom.c taper.c \
 	output.c emit.c ps_font_equiv.txt ps_fontmap.txt fontmap.cfg \
 	color_names
 
