Add missing rule for converting .gv to .gif

--- a/doc/infosrc/Makefile.old
+++ b/doc/infosrc/Makefile.old
@@ -67,6 +67,9 @@ INSTALL_FILES = $(HTML) $(DOTS) $(SGIF) $(AGIF) $(A2GIF) $(MGIF) $(XGIF) $(MJPG)
 .dot.gif :
 	dot -Tgif -o $@ $<
 
+.gv.gif :
+	dot -Tgif -o $@ $<
+
 .gv.png :
 	dot -Tpng -o $@ $<
 
