add code snippet for easy application of patches

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -572,6 +572,9 @@ Provides some additional PDF and HTML documentation for graphviz.
 #-- building --------------------------------------------------
 
 %prep
+for p in %{patches}; do
+     patch -p1 < ${p} || exit 1
+done
 %setup -q
 
 %build
