don't attempt to package various old Makefiles that have been deleted

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,7 +39,7 @@ EXTRA_DIST = $(txt) $(html) graphviz.spec.in graphviz.spec \
 	Makefile.old Config.mk.old configure.old INSTALL.old \
 	Makeargs config.h.old compat_getopt.h iffe config.iffe \
 	m4/README m4/iconv.m4 m4/lib-ld.m4 m4/lib-link.m4 m4/lib-prefix.m4 \
-	graphviz.7 Doxyfile.in Doxyfile makearch features awk \
+	graphviz.7 Doxyfile.in Doxyfile features awk \
 	config/config_perl.pl config/config_python.py \
 	config/config_ruby.rb config/config_tcl.tcl dot.demo  plugin.demo \
 	macosx windows debian graphviz.vcproj graphviz.sln
