--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -139,8 +139,6 @@ BuildRequires: lasi-devel
 %define GDK_PIXBUF 1
 %define IPSEPCOLA 1
 %define ORTHO 1
-%define R_LANG 1
-BuildRequires: R-devel swig >= 1.3.33 perl-libs
 %define SMYRNA 1
 BuildRequires: libglade2-devel gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel freeglut-devel
 #define GLITZ 1
@@ -149,9 +147,10 @@ BuildRequires: libglade2-devel gtkglarea2-devel gtkglext-devel glade3-libgladeui
 BuildRequires: ghostscript-devel
 #define MING 1
 #BuildRequires: ming ming-devel
-%endif
-%if %fedora >= 17
+%if %fedora < 17
 %define R_LANG 1
+BuildRequires: R-devel swig >= 1.3.33 perl-libs
+%endif
 %endif
 %endif
 
