RectArea versions for systems with or w/o long long AC_CHECK_SIZEOF macros added to configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -3206,6 +3206,9 @@ fi
 rm -f conftest*
 
 # -----------------------------------------------------------------------
+AC_CHECK_SIZEOF([long long])
+AC_CHECK_SIZEOF([int])
+# -----------------------------------------------------------------------
 
 # Generate Makefiles
 AC_CONFIG_FILES(Makefile
