attempt to fix php api churn

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -448,7 +448,7 @@ Perl extension for graphviz.
 Group:          Applications/Multimedia
 Summary:        PHP extension for graphviz
 Requires:       graphviz = %{version}-%{release} php
-%if 0%{?fedora} >= 16
+%if 0%{?fedora} == 16
 Requires:       php-api = %{php_apiver}
 %else
 Requires:       php(zend-abi) = %{php_zend_api}
