--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -189,6 +189,10 @@ fi
 %exclude %{_bindir}/dot_builtins
 %if 0%{?_QT}
 %exclude %{_bindir}/gvedit
+%exclude %{_bindir}/lefty
+%exclude %{_bindir}/lneato
+%exclude %{_bindir}/dotty
+%exclude %{_bindir}/vimdot
 %endif
 %dir %{_libdir}/graphviz
 %{_libdir}/*.so.*
@@ -196,8 +200,20 @@ fi
 %{_mandir}/man1/*.1*
 %{_mandir}/man7/*.7*
 %dir %{_datadir}/graphviz
-%{_datadir}/graphviz/lefty
+%exclude %{_datadir}/graphviz/lefty
 %exclude %{_libdir}/graphviz/libgvplugin_gd.*
+%if 0%{?PANGOCAIRO}
+%exclude %{_libdir}/graphviz/libgvplugin_pango.*
+%endif
+%if 0%{?GDK_PIXBUF}
+%exclude %{_libdir}/graphviz/libgvplugin_gdk_pixbuf.*
+%endif
+%exclude %{_libdir}/graphviz/libgvplugin_gtk.*
+%exclude %{_libdir}/graphviz/libgvplugin_gs.*
+%if 0%{?RSVG}
+%exclude %{_libdir}/graphviz/libgvplugin_rsvg.*
+%endif
+%exclude %{_libdir}/graphviz/libgvplugin_xlib.*
 %if 0%{?WEBP}
 %exclude %{_libdir}/graphviz/libgvplugin_webp.*
 %endif
@@ -208,6 +224,44 @@ fi
 %exclude %{_libdir}/graphviz/libgvplugin_ming.*
 %exclude %{_libdir}/graphviz/*fdb
 %endif
+%if 0%{?SMYRNA}
+%exclude %{_datadir}/graphviz/smyrna
+%endif
+
+#-- graphviz-x11 rpm --------------------------------------------------
+%package x11
+Group:            Applications/Multimedia
+Summary:          Graphviz plugins and commands that depend on x11 - most installations will want this
+Requires:         graphviz = %{version}-%{release}
+
+%description x11
+Graphviz plugins and commands that depend on x11 - most installations will want this
+
+# run "dot -c" to generate plugin config in %{_libdir}/graphviz/config
+%post x11
+LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
+
+%postun x11
+[ -x $RPM_INSTALL_PREFIX0/bin/dot ] && LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c || :
+
+%files x11
+%{_bindir}/lefty
+%{_bindir}/lneato
+%{_bindir}/dotty
+%{_bindir}/vimdot
+%{_datadir}/graphviz/lefty
+%if 0%{?PANGOCAIRO}
+%{_libdir}/graphviz/libgvplugin_pango.*
+%endif
+%if 0%{?GDK_PIXBUF}
+%{_libdir}/graphviz/libgvplugin_gdk_pixbuf.*
+%endif
+%{_libdir}/graphviz/libgvplugin_gtk.*
+%{_libdir}/graphviz/libgvplugin_gs.*
+%if 0%{?RSVG}
+%{_libdir}/graphviz/libgvplugin_rsvg.*
+%endif
+%{_libdir}/graphviz/libgvplugin_xlib.*
 %if 0%{?SMYRNA}
 %{_datadir}/graphviz/smyrna
 %endif
@@ -240,7 +294,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %package webp
 Group:            Applications/Multimedia
 Summary:          Graphviz plugin for webp format images, using libwebp
-Requires:         graphviz = %{version}-%{release}
+Requires:         graphviz-x11 = %{version}-%{release}
 
 %description webp
 Graphviz plugin for webp image rendering. 
@@ -261,7 +315,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %package devil
 Group:            Applications/Multimedia
 Summary:          Graphviz plugin for renderers based on DevIL
-Requires:         graphviz = %{version}-%{release}
+Requires:         graphviz-x11 = %{version}-%{release}
 
 %description devil
 Graphviz plugin for renderers based on DevIL.  (Unless you absolutely have
@@ -284,7 +338,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %package ming
 Group:            Applications/Multimedia
 Summary:          Graphviz plugin for flash renderer based on ming
-Requires:         graphviz = %{version}-%{release}
+Requires:         graphviz-x11 = %{version}-%{release}
 
 %description ming
 Graphviz plugin for -Tswf (flash) renderer based on ming.
@@ -306,7 +360,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %package qt
 Group:            Applications/Multimedia
 Summary:          Graphviz applications using _QT
-Requires:         graphviz = %{version}-%{release}
+Requires:         graphviz-x11 = %{version}-%{release}
 
 %description qt
 Graphviz applications using _QT - currently just gvedit
