--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -228,23 +228,23 @@ fi
 %exclude %{_datadir}/graphviz/smyrna
 %endif
 
-#-- graphviz-x11 rpm --------------------------------------------------
-%package x11
+#-- graphviz-x rpm --------------------------------------------------
+%package x
 Group:            Applications/Multimedia
 Summary:          Graphviz plugins and commands that depend on x11 - most installations will want this
 Requires:         graphviz = %{version}-%{release}
 
-%description x11
+%description x
 Graphviz plugins and commands that depend on x11 - most installations will want this
 
 # run "dot -c" to generate plugin config in %{_libdir}/graphviz/config
-%post x11
+%post x
 LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 
-%postun x11
+%postun x
 [ -x $RPM_INSTALL_PREFIX0/bin/dot ] && LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c || :
 
-%files x11
+%files x
 %{_bindir}/lefty
 %{_bindir}/lneato
 %{_bindir}/dotty
@@ -294,7 +294,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %package webp
 Group:            Applications/Multimedia
 Summary:          Graphviz plugin for webp format images, using libwebp
-Requires:         graphviz-x11 = %{version}-%{release}
+Requires:         graphviz-x = %{version}-%{release}
 
 %description webp
 Graphviz plugin for webp image rendering. 
@@ -315,7 +315,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %package devil
 Group:            Applications/Multimedia
 Summary:          Graphviz plugin for renderers based on DevIL
-Requires:         graphviz-x11 = %{version}-%{release}
+Requires:         graphviz-x = %{version}-%{release}
 
 %description devil
 Graphviz plugin for renderers based on DevIL.  (Unless you absolutely have
@@ -338,7 +338,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %package ming
 Group:            Applications/Multimedia
 Summary:          Graphviz plugin for flash renderer based on ming
-Requires:         graphviz-x11 = %{version}-%{release}
+Requires:         graphviz-x = %{version}-%{release}
 
 %description ming
 Graphviz plugin for -Tswf (flash) renderer based on ming.
@@ -360,7 +360,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %package qt
 Group:            Applications/Multimedia
 Summary:          Graphviz applications using _QT
-Requires:         graphviz-x11 = %{version}-%{release}
+Requires:         graphviz-x = %{version}-%{release}
 
 %description qt
 Graphviz applications using _QT - currently just gvedit
