--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -205,6 +205,9 @@ fi
 %if 0%{?PANGOCAIRO}
 %exclude %{_libdir}/graphviz/libgvplugin_pango.*
 %endif
+%if 0%{?LASI}
+%exclude %{_libdir}/graphviz/libgvplugin_lasi.*
+%endif
 %if 0%{?GDK_PIXBUF}
 %exclude %{_libdir}/graphviz/libgvplugin_gdk_pixbuf.*
 %endif
@@ -225,6 +228,7 @@ fi
 %exclude %{_libdir}/graphviz/*fdb
 %endif
 %if 0%{?SMYRNA}
+%exclude %{_bindir}/smyrna
 %exclude %{_datadir}/graphviz/smyrna
 %endif
 
@@ -253,6 +257,9 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %if 0%{?PANGOCAIRO}
 %{_libdir}/graphviz/libgvplugin_pango.*
 %endif
+%if 0%{?LASI}
+%{_libdir}/graphviz/libgvplugin_lasi.*
+%endif
 %if 0%{?GDK_PIXBUF}
 %{_libdir}/graphviz/libgvplugin_gdk_pixbuf.*
 %endif
@@ -263,6 +270,7 @@ LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
 %endif
 %{_libdir}/graphviz/libgvplugin_xlib.*
 %if 0%{?SMYRNA}
+%{_bindir}/smyrna
 %{_datadir}/graphviz/smyrna
 %endif
 
@@ -502,11 +510,16 @@ Perl extension for graphviz.
 Group:          Applications/Multimedia
 Summary:        PHP extension for graphviz
 Requires:       graphviz = %{version}-%{release} php
+%if 0%{?fedora} >= 17
+Requires:       php(zend-abi) = %{php_zend_api}
+Requires:       php(api) = %{php_core_api}
+%else
 %if 0%{?fedora} == 16
 Requires:       php-api = %{php_apiver}
 %else
 Requires:       php(zend-abi) = %{php_zend_api}
 Requires:       php(api) = %{php_core_api}
+%endif
 %endif
 
 %description php
