--- a/plugin/lasi/Makefile.am
+++ b/plugin/lasi/Makefile.am
@@ -30,6 +30,7 @@ endif
 libgvplugin_lasi_C_la_SOURCES = \
 	gvplugin_lasi.c \
 	gvrender_lasi.cpp \
+	gvloadimage_lasi.c \
 	ps.txt
 
 libgvplugin_lasi_la_LDFLAGS = -version-info @GVPLUGIN_VERSION_INFO@
